@@ -31,6 +31,8 @@ DDD 2.1 (in development)
       menu item (which issues a `quit' command).
     - DBX settings can now be viewed and changed at run time.
     - Reading the VSL library is now realized as a background job.
+    - In the data window, the middle mouse button now toggles 
+      the display selection instead of simply extending it.
     - If the debugged program is interrupted while grabbing the
       pointer (while being in a popup menu or in a modal dialog, for
       instance), DDD will automatically make the program ungrab it.
